objects/Subjects__c.object
<CustomObject>
    <fields>
        <fullName>End_Date_to_Complete_the_Syllabus__c</fullName>
        <description>The End Date to Complete the Syllabus of the Subject</description>
        <label>End Date to Complete the Syllabus</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pass_Percentage__c</fullName>
        <description>The Pass percentage of the Subjects</description>
        <label>Pass Percentage</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Teacher__c</fullName>
        <description>Subject though by Which Teacher</description>
        <label>Sub_Teacher</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subjects__c</fullName>
        <description>There are the Subjects Teached in the School</description>
        <label>Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Telugu,</fullName>
                </value>
                <value>
                    <fullName>Hindi,</fullName>
                </value>
                <value>
                    <fullName>English,</fullName>
                </value>
                <value>
                    <fullName>Math&apos;s,</fullName>
                </value>
                <value>
                    <fullName>Science,</fullName>
                </value>
                <value>
                    <fullName>Social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Syllabus__c</fullName>
        <description>Subject Syllabus</description>
        <label>Syllabus</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Subject</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subjects Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>